refactor(jolt): use Math.clamp for native result bounds
Signed-off-by: Blovien <blovien@hytalemodding.dev>